k8s/apps/base/jellyfin/epgstation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: epgstation
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: epgstation
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: epgstation
  ports:
    - name: http
      port: 8888
      targetPort: http
      protocol: TCP
